added logout endpoint
